--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
 
+    implementation 'androidx.media:media:1.1.0'
+
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 }
