--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
             android:screenOrientation="portrait">
 
         </activity>
+
+        <receiver android:name=".Services.NotificationActionService"/>
+
+        <service android:name=".Services.OnClearFromRecentService"/>
     </application>
 
 </manifest>
